# latent-manifold-v1-natural-movies

./: .gitignore  CHANGELOG_CONFIDENT_ORIENTATION_V3.md  CHANGELOG_EMBEDDING_VALIDATION_V5.md  CHANGELOG_IMBALANCE_NULLS_V2.md  CHANGELOG_LATENT_FEATURE_CONTROLS_V4.md  CHANGELOG_REAL_STIMULUS_FEATURES.md  CITATION.cff  MANIFEST.json  Makefile  NEUROAI_PROJECTS.md  README.md  README_PUBLICATION_MULTISESSION_UPGRADE_V3.md  README_PUBLICATION_UPGRADE.md  environment-publication.yml  environment.yml  pyproject-publication.toml  pyproject.toml  requirements-publication.txt  requirements.txt
app/: streamlit_app.py
configs/: default.yaml  publication_multisession_upgrade.yaml  publication_session_500964514.yaml  publication_session_501271265.yaml  publication_upgrade.yaml
docs/: CNAME  index.html  index.md
notebooks/: 00_project_overview.ipynb  01_data_acquisition_and_metadata.ipynb  02_data_loading_and_validation.ipynb  03_neural_preprocessing.ipynb  04_exploratory_neural_data_analysis.ipynb  05_feature_extraction_and_latent_representations.ipynb  06_baseline_decoding_models.ipynb  07_advanced_cebra_and_drnn_models.ipynb  08_model_evaluation_and_comparison.ipynb  09_interpretability_geometry_and_brain_model_alignment.ipynb  10_report_generation.ipynb  11_publication_cohort_and_qc.ipynb  12_enhanced_stimulus_features.ipynb  12c_multisession_asset_preparation_and_driver.ipynb  14_layer_geometry_statistics.ipynb  15_brain_model_alignment_rsa_cka.ipynb  16_cross_session_manifold_alignment.ipynb  17_publication_figures_and_manuscript_assets.ipynb
scripts/: build_report.py  (+19 more)
(+62 files in other folders)
