[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v1-manifold"
version = "0.1.0"
description = "Latent manifold geometry of Allen Brain Observatory V1 population codes during natural movie viewing"
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [{name = "Peter Adepoju"}]
license = {text = "MIT"}
keywords = ["NeuroAI", "neural manifolds", "Allen Brain Observatory", "calcium imaging", "CEBRA"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
